// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnionPredicate errors if a non-array is not passed 1`] = `"A non-empty array of blueprints are required for a union."`;

exports[`UnionPredicate errors if an array with non-predicates is passed 1`] = `"A non-empty array of blueprints are required for a union."`;

exports[`UnionPredicate errors if an empty array is passed 1`] = `"A non-empty array of blueprints are required for a union."`;

exports[`UnionPredicate run() errors if a nested union is used 1`] = `"Invalid field \\"key\\". Nested unions are not supported."`;

exports[`UnionPredicate run() errors if a unsupported type is used 1`] = `"Invalid field \\"key\\". Received array but type must be one of: string, number, boolean."`;

exports[`UnionPredicate run() errors with the class name for instance checks 1`] = `"Invalid field \\"key\\". Received object but type must be one of: number, Buffer."`;

exports[`UnionPredicate run() runs array check 1`] = `
"Invalid field \\"key\\". Received array but type must be one of: array<string>, boolean, Foo, number, object<number>, string.
 - Invalid field \\"key[0]\\". Must be a string."
`;

exports[`UnionPredicate run() runs boolean check 1`] = `
"Invalid field \\"key\\". Received boolean but type must be one of: array<string>, boolean, Foo, number, object<number>, string.
 - Value may only be \\"true\\"."
`;

exports[`UnionPredicate run() runs custom check 1`] = `
"Invalid field \\"key\\". Received number but type must be one of: string, custom.
 - Encountered a number!"
`;

exports[`UnionPredicate run() runs instance check 1`] = `
"Invalid field \\"key\\". Received instance but type must be one of: array<string>, boolean, Foo, number, object<number>, string.
 - Must be an instance of \\"Foo\\"."
`;

exports[`UnionPredicate run() runs number check 1`] = `
"Invalid field \\"key\\". Received number but type must be one of: array<string>, boolean, Foo, number, object<number>, string.
 - Number must be between 0 and 5."
`;

exports[`UnionPredicate run() runs object check 1`] = `
"Invalid field \\"key\\". Received object but type must be one of: array<string>, boolean, Foo, number, object<number>, string.
 - Invalid field \\"key.foo\\". Must be a number."
`;

exports[`UnionPredicate run() runs shape check 1`] = `
"Invalid field \\"key\\". Received object but type must be: shape.
 - Invalid field \\"key.foo\\". Must be a string."
`;

exports[`UnionPredicate run() runs string check 1`] = `
"Invalid field \\"key\\". Received string but type must be one of: array<string>, boolean, Foo, number, object<number>, string.
 - String must be one of: foo, bar, baz"
`;

exports[`UnionPredicate run() runs tuple check 1`] = `"Invalid field \\"key\\". Received string but type must be: tuple<string, string, string>."`;

exports[`UnionPredicate run() supports multiple array predicates 1`] = `
"Invalid field \\"key\\". Received array but type must be one of: array<string>, array<number>.
 - Invalid field \\"key[0]\\". Must be a string.
 - Invalid field \\"key[0]\\". Must be a number."
`;

exports[`UnionPredicate run() supports multiple object predicates 1`] = `
"Invalid field \\"key\\". Received object but type must be one of: object<string>, object<number>.
 - Invalid field \\"key.foo\\". Must be a string.
 - Invalid field \\"key.foo\\". Must be a number."
`;

exports[`UnionPredicate run() supports object and shape predicates in parallel 1`] = `
"Invalid field \\"key\\". Received object but type must be one of: shape, object<string>.
 - Unknown \\"key\\" fields: unknown.
 - Invalid field \\"key.unknown\\". Must be a string."
`;

exports[`UnionPredicate run() supports object and shape predicates in parallel 2`] = `
"Invalid field \\"key\\". Received object but type must be one of: shape, object<string>.
 - Invalid field \\"key.foo\\". Must be a string."
`;

exports[`UnionPredicate run() supports object and shape predicates in parallel 3`] = `
"Invalid field \\"key\\". Received object but type must be one of: shape, object<string>.
 - Invalid field \\"key.bar\\". Must be a number.
 - Invalid field \\"key.baz\\". Must be a string."
`;

exports[`UnionPredicate run() supports very complex nested unions 1`] = `
"Invalid field \\"key\\". Received array but type must be one of: array<string | tuple<string, boolean | object>>, object<boolean | object>.
 - Invalid field \\"key[1]\\". Received array but type must be one of: string, tuple<string, boolean | object>.
 - Invalid field \\"key[1][1]\\". Null is not allowed."
`;

exports[`UnionPredicate run() supports very complex nested unions 2`] = `
"Invalid field \\"key\\". Received object but type must be one of: array<string | tuple<string, boolean | object>>, object<boolean | object>.
 - Invalid field \\"key.b\\". Received number but type must be one of: boolean, object."
`;
